--- a/app/views/terms_of_memberships/index.html.erb
+++ b/app/views/terms_of_memberships/index.html.erb
@@ -1,6 +1,6 @@
 <section>
   <div class="page-header">
-    <h1>Subscription Plans</h1>
+    <h1>Subscriptions Plans</h1>
     <% if can? :create, TermsOfMembership %>
       <%= link_to(new_terms_of_membership_path, :class => "btn btn-primary btn_on_header", :id => "new_tom") do %> 
         <i class="icon-plus"></i> Add New Plan
