--- a/app/views/terms_of_memberships/show.html.erb
+++ b/app/views/terms_of_memberships/show.html.erb
@@ -32,8 +32,8 @@
       <%= @tom.installment_period.nil? ? 0 : @tom.installment_period  %>  <%= t('days') %>
     </div>
     <div class="span2"> 
-      <b> <%= t('activerecord.attributes.terms_of_membership.suscription_limits') %>: </b> 
-      <%= @tom.suscription_limits %>
+      <b> <%= t('activerecord.attributes.terms_of_membership.subscription_limits') %>: </b> 
+      <%= @tom.subscription_limits %>
     </div>
     <div class="span2"> 
       <b> <%= t('activerecord.attributes.terms_of_membership.external_code') %>: </b> 
@@ -57,7 +57,7 @@
     </div>
     <% if @tom.downgradable? %>
       <div class="span4"> 
-        <b> <%= t('activerecord.model.suscription_plans').singularize %>: </b> 
+        <b> <%= t('activerecord.model.subscription_plans').singularize %>: </b> 
         <% if @tom.downgrade_tom %>
           <%= @tom.downgrade_tom.name %> (ID: <%= @tom.downgrade_tom_id %>)
         <% else %>
