[#55171774]-added disable on not neccesary fields when not using that option.

--- a/app/views/terms_of_memberships/_form.html.erb
+++ b/app/views/terms_of_memberships/_form.html.erb
@@ -151,6 +151,14 @@
 
 <script type="text/javascript">
   // Second Step
+
+  function until_cancel_logic(){
+    $('#subscription_terms_stop_billing_after').removeAttr('required');
+    $('#subscription_terms_stop_billing_after').prop('disabled',true);
+    $('#subscription_terms_stop_billing_after_time_span').removeAttr('required');
+    $('#subscription_terms_stop_billing_after_time_span').prop('disabled',true);    
+  }
+
   $('#is_payment_expected_yes').click(function() {
     window.atTheEndOfTheTrial = "payment";
     $('#recurring_amount_group').show('fast');
@@ -168,36 +176,52 @@
   });
 
   $('#subscription_terms_until_cancelled').click(function() {
-    $('#subscription_terms_stop_billing_after').removeAttr('required');
+    until_cancel_logic();
   });
 
   $('#subscription_terms_stop_cancel_after').click(function() {
     $('#subscription_terms_stop_billing_after').prop('required', true);
+    $('#subscription_terms_stop_billing_after').removeAttr('disabled');
+    $('#subscription_terms_stop_billing_after_time_span').prop('required', true);
+    $('#subscription_terms_stop_billing_after_time_span').removeAttr('disabled');
   });
 
   // Third Step
-  $('#if_cannot_bill_member_cancel').click(function() {
+
+  function cancel_radio_logic(){
     $('#if_cannot_bill_member_suspend_for').removeAttr('required');
     $('#downgrade_to_tom').removeAttr('required');
     $('#if_cannot_bill_member_suspend_for').prop('disabled', true);
     $('#if_cannot_bill_member_suspend_for_time_span').prop('disabled', true);
     $('#downgrade_to_tom').prop('disabled', true);
-  });
+  }
 
-  $('#if_cannot_bill_member_suspend').click(function() {
+  function suspend_radio_logic(){
     $('#if_cannot_bill_member_suspend_for').prop('required', true);
     $('#downgrade_to_tom').removeAttr('required');
     $('#if_cannot_bill_member_suspend_for').prop('disabled', false);
     $('#if_cannot_bill_member_suspend_for_time_span').prop('disabled', false);
-    $('#downgrade_to_tom').prop('disabled', true);
-  });
+    $('#downgrade_to_tom').prop('disabled', true);   
+  }
 
-  $('#if_cannot_bill_member_downgrade_to').click(function() {
+  function downgrade_radio_logic(){    
     $('#if_cannot_bill_member_suspend_for').removeAttr('required');
     $('#downgrade_to_tom').prop('required', true);
     $('#if_cannot_bill_member_suspend_for').prop('disabled', true);
     $('#if_cannot_bill_member_suspend_for_time_span').prop('disabled', true);
-    $('#downgrade_to_tom').prop('disabled', false);
+    $('#downgrade_to_tom').prop('disabled', false);  
+  }
+
+  $('#if_cannot_bill_member_cancel').click(function() {
+    cancel_radio_logic();
+  });
+
+  $('#if_cannot_bill_member_suspend').click(function() {
+    suspend_radio_logic();
+  });
+
+  $('#if_cannot_bill_member_downgrade_to').click(function() {
+    downgrade_radio_logic();
   });
 
   $('#upgrade_to_tom').on('change', function() {
@@ -262,6 +286,30 @@
     $("#tom_wizard_form").bind("before_step_shown", function(event, data) {
       set_button_next_label(data.currentStep);
     });
+  });
+
+  $("#tom_wizard_form").bind("step_shown", function(event, data){
+    currentStep = $("#tom_wizard_form").formwizard("state").currentStep;
+    switch(currentStep) {
+      case "second":
+        if ("<%= (@tom.subscription_limits.nil? or @tom.subscription_limits==0) %>" == "true"){
+          until_cancel_logic();
+        }
+        break;
+      case "third":
+          switch("<%= @tom.if_cannot_bill %>"){
+            case "cancel":
+              cancel_radio_logic();
+              break;
+            case "suspend":
+              suspend_radio_logic();
+              break;
+            case "downgrade_tom":
+              downgrade_radio_logic();
+              break;
+          }
+        break;
+    }
   });
 
   $(document).ready(function() {
