--- a/app/views/members/_search.html.erb
+++ b/app/views/members/_search.html.erb
@@ -18,7 +18,7 @@
   </thead>
   <tbody>
     <% if @members %>
-      <% if @members.count == 0 %>
+      <% if @members.blank? %>
         <tr> <td colspan="<%= @current_club.requires_external_id ? 9 : 8 %>"> <%= t('activerecord.attributes.member.search_member_not_found') %> </td> </tr>
       <% else %>
         <% @members.each do |member| %>
