[#57147836] fixed terms of memberhips tests and also form

--- a/app/views/terms_of_memberships/_form.html.erb
+++ b/app/views/terms_of_memberships/_form.html.erb
@@ -99,14 +99,14 @@
   <div class="control-group">
     <%= label_tag 'initial_club_cash_amount', t('activerecord.attributes.terms_of_membership.wizard.initial_club_cash_amount'), :class => 'control-label' %>
     <div class="controls">
-      <%= text_field_tag 'initial_club_cash_amount', @tom.initial_club_cash_amount, :class => 'text_field input_medium', :type => 'number' %>
+      <%= f.text_field 'initial_club_cash_amount', :class => 'text_field input-small', :type => 'number' %>
     </div>
   </div>
 
   <div class="control-group">
     <%= label_tag 'club_cash_installment_amount', t('activerecord.attributes.terms_of_membership.wizard.club_cash_installment_amount'), :class => 'control-label' %>
     <div class="controls">
-      <%= text_field_tag 'club_cash_installment_amount', @tom.club_cash_installment_amount, :class => 'text_field input_medium', :type => 'number' %>
+      <%= f.text_field 'club_cash_installment_amount', :class => 'text_field input-small', :type => 'number' %>
       <%= t('activerecord.attributes.terms_of_membership.wizard.skip_first_club_cash') %>
       <%= f.check_box 'skip_first_club_cash' %>
     </div>
