--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -27,90 +27,90 @@
     <tr class="box_title"><th colspan="2"><h4>Demographic information</h4></th></tr>
   </thead>
   <tbody>
-  <tr>
-    <td style="width: 50%;">
-      <table class="hidden_table_border table-nohover">
-        <tr class = "control-group">
-          <th>
-            <%= f.label :first_name, t('activerecord.attributes.member.first_name'), :class => 'help-inline required_asterick' %>
-          </th>
-          <td> 
-            <%= f.text_field :first_name, :class => 'text_field' %> 
-          </td>  
-        </tr>
-        <tr class = "control-group">
-          <th>
-            <%= f.label :gender, t('activerecord.attributes.member.gender'), :class => 'help-inline' %>
-          </th>
-          <td> 
-            <% selected = @current_member ? @current_member.gender : nil%>
-            <%= f.select :gender, [['Male', 'M'],['Female', 'F'],], :class => 'select_field', :include_blank => true %>
-          </td>  
-        </tr>        
-        <tr class = "control-group">
-          <th>
-            <%= f.label :address, t('activerecord.attributes.member.address'), :class => 'help-inline required_asterick' %>
-          </th>
-          <td> 
-            <%= f.text_field :address, :class => 'text_field' %> 
-          </td>  
-        </tr>
-        <tr class = "control-group">
-          <th>
-            <%= f.label :country, t('activerecord.attributes.member.country'), :class => 'help-inline required_asterick' %>
-          </th>
-          <td> 
-            <%= f.select(:country, Member.supported_countries.map { |cc| [Member.country_name(cc), cc]}, :prompt => t('buttons.select_country')) %>
-          </td>  
-        </tr>
-        <tr class = "control-group">
-          <th>
-            <%= f.label :state, t('activerecord.attributes.member.state'), :class => 'help-inline required_asterick' %>
-          </th>
-          <td id="states_td"> 
-            <%= render :partial => 'states', :locals => {:f => f, :state => (@current_member.state if @current_member)}  %>
-          </td>  
-        </tr>
-      </table>
-    </td>
-    <td style="width: 50%;">
-      <table class="hidden_table_border">
-        <tr class = "control-group">
-          <th>
-            <%= f.label :last_name, t('activerecord.attributes.member.last_name'), :class => 'help-inline required_asterick' %>
-          </th>
-          <td> 
-            <%= f.text_field :last_name, :class => 'text_field' %> 
-          </td>  
-        </tr>
-        <tr class = "control-group">
-          <th>
-            <%= f.label :city, t('activerecord.attributes.member.city'), :class => 'help-inline required_asterick' %>
-          </th>
-          <td> 
-            <%= f.text_field :city, :class => 'text_field' %> 
-          </td>  
-        </tr>
-        <tr class = "control-group">
-          <th>
-            <%= f.label :zip, t('activerecord.attributes.member.zip'), :class => 'help-inline required_asterick' %>
-          </th>
-          <td> 
-            <%= f.text_field :zip, :class => 'text_field' %>       
-            <%= render :partial => "shared/help", :locals => { :title => t('example'), :content => t('activerecord.attributes.member.zip_help')} %> 
-          </td>  
-        </tr>
-        <tr class = "control-group">
-          <th>
-            <%= f.label :birth_date, t('activerecord.attributes.member.birth_date'), :class => 'help-inline' %>
-          </th>
-          <td> 
-            <%= f.text_field :birth_date, :class => 'datepicker', :readonly => 'readonly' %> 
-          </td>  
-        </tr>
-      </table>
-    </td>
-  </tr>
+    <tr>
+      <td style="width: 50%;">
+        <table class="hidden_table_border table-nohover">
+          <tr class = "control-group">
+            <th>
+              <%= f.label :first_name, t('activerecord.attributes.member.first_name'), :class => 'help-inline required_asterick' %>
+            </th>
+            <td> 
+              <%= f.text_field :first_name, :class => 'text_field' %> 
+            </td>  
+          </tr>
+          <tr class = "control-group">
+            <th>
+              <%= f.label :gender, t('activerecord.attributes.member.gender'), :class => 'help-inline' %>
+            </th>
+            <td> 
+              <% selected = @current_member ? @current_member.gender : nil%>
+              <%= f.select :gender, [['Male', 'M'],['Female', 'F'],], :class => 'select_field', :include_blank => true %>
+            </td>  
+          </tr>        
+          <tr class = "control-group">
+            <th>
+              <%= f.label :address, t('activerecord.attributes.member.address'), :class => 'help-inline required_asterick' %>
+            </th>
+            <td> 
+              <%= f.text_field :address, :class => 'text_field' %> 
+            </td>  
+          </tr>
+          <tr class = "control-group">
+            <th>
+              <%= f.label :country, t('activerecord.attributes.member.country'), :class => 'help-inline required_asterick' %>
+            </th>
+            <td> 
+              <%= f.select(:country, Member.supported_countries.map { |cc| [Member.country_name(cc), cc]}, :prompt => t('buttons.select_country')) %>
+            </td>  
+          </tr>
+          <tr class = "control-group">
+            <th>
+              <%= f.label :state, t('activerecord.attributes.member.state'), :class => 'help-inline required_asterick' %>
+            </th>
+            <td id="states_td"> 
+              <%= render :partial => 'states', :locals => {:f => f, :state => (@current_member.state if @current_member)}  %>
+            </td>  
+          </tr>
+        </table>
+      </td>
+      <td style="width: 50%;">
+        <table class="hidden_table_border">
+          <tr class = "control-group">
+            <th>
+              <%= f.label :last_name, t('activerecord.attributes.member.last_name'), :class => 'help-inline required_asterick' %>
+            </th>
+            <td> 
+              <%= f.text_field :last_name, :class => 'text_field' %> 
+            </td>  
+          </tr>
+          <tr class = "control-group">
+            <th>
+              <%= f.label :city, t('activerecord.attributes.member.city'), :class => 'help-inline required_asterick' %>
+            </th>
+            <td> 
+              <%= f.text_field :city, :class => 'text_field' %> 
+            </td>  
+          </tr>
+          <tr class = "control-group">
+            <th>
+              <%= f.label :zip, t('activerecord.attributes.member.zip'), :class => 'help-inline required_asterick' %>
+            </th>
+            <td> 
+              <%= f.text_field :zip, :class => 'text_field' %>       
+              <%= render :partial => "shared/help", :locals => { :title => t('example'), :content => t('activerecord.attributes.member.zip_help')} %> 
+            </td>  
+          </tr>
+          <tr class = "control-group">
+            <th>
+              <%= f.label :birth_date, t('activerecord.attributes.member.birth_date'), :class => 'help-inline' %>
+            </th>
+            <td> 
+              <%= f.text_field :birth_date, :class => 'datepicker', :readonly => 'readonly' %> 
+            </td>  
+          </tr>
+        </table>
+      </td>
+    </tr>
   </tbody>
 </table>
 
@@ -119,111 +119,143 @@
     <tr class="box_title"><th colspan="2"><h4>Contact Information</h4></th></tr>
   </thead>
   <tbody>
-  <tr>
-    <td style="width: 50%;">
-      <table class="hidden_table_border">
-        <tr class = "control-group">
-          <th>
-            <%= f.label :phone_number, t('activerecord.attributes.member.phone_number'), :class => 'help-inline required_asterick' %>
-          </th>
-          <td> 
-            <%= f.text_field :phone_country_code, :class => 'text_field input-mini', :placeholder => t('activerecord.attributes.member.phone_country_code') %> 
-            <%= f.text_field :phone_area_code, :class => 'text_field input-mini', :placeholder => t('activerecord.attributes.member.phone_area_code') %> 
-            <%= f.text_field :phone_local_number, :class => 'text_field input-mini', :placeholder => t('activerecord.attributes.member.phone_local_number') %> 
-            <% if !@member.new_record? && !@member.wrong_phone_number.nil? %>
-            <br><%= t('activerecord.attributes.member.unset_wrong_phone_number') %>
-                <%= check_box :setter, :wrong_phone_number %>
-            <% end %>
-          </td>  
-        </tr>
-        <tr class = "control-group">
-          <th>
-            <%= f.label :type_of_phone_number, t('activerecord.attributes.member.type_of_phone_number'), :class => 'help-inline' %>
-          </th>
-          <td> 
-            <%= f.select :type_of_phone_number, [['Mobile', 'mobile'],['Home', 'home'],['Other','other']], :class => 'select_field', :include_blank => true %>
-          </td>  
-        </tr>
-        <tr class = "control-group">
-          <% if @member.new_record? %>
-            <th>
-              <%= f.label :terms_of_membership_id, t('activerecord.attributes.member.terms_of_membership_id'), :class => 'help-inline required_asterick' %>
-            </th>
-            <th> 
-              <%= select_tag('member[terms_of_membership_id]', options_from_collection_for_select(@terms_of_memberships, "id", "name")) %>
-            </th>  
-          <% elsif can? :manual_billing, Member and not @member.manual_payment %>
-            <th>
-            <%= f.label :manual_payment, t('activerecord.attributes.member.manual_payment'), :class => 'help-inline' %>
-            </th>
-            <th> 
-              <%= check_box :member, :manual_payment %>              
-              <%= render :partial => "shared/help", :locals => { :title => t('activerecord.attributes.member.manual_payment'), :content => t('activerecord.attributes.member.manual_payment_help')} %>
-            </th>
-          <% end %>
-        </tr>
-      </table>
-    </td>
-    <td style="width: 50%;">
-      <table class="hidden_table_border">
-        <tr class = "control-group">
-          <th>
-            <%= f.label :email, t('activerecord.attributes.member.email'), :class => 'help-inline required_asterick' %>
-          </th>
-          <td> 
-            <%= f.text_field :email, :class => 'text_field'%>
-          </td>  
-        </tr>
-      </table>
-    </td>
-  </tr>
-  </tbody>
-</table>
-
-<% if @member.new_record? %>
-<table id="table_credit_card" class="table table-bordered table-condensed table-nohover">
-  <thead>
-    <tr class="box_title">
-      <th>
-        <h4>Credit Card
-        <%= f.label :allow_cc_blank,t('Allow blank credit card?'), :class => 'help-inline' %>
-        <%= check_box :setter, :cc_blank %>
-        </h4>
-      </th>
-    </tr>
-  </thead>
-  <tbody>
-  <%= f.fields_for :credit_card do |credit_card| %>
     <tr>
-      <td>
+      <td style="width: 50%;">
         <table class="hidden_table_border">
           <tr class = "control-group">
             <th>
-              <%= credit_card.label :number, t('activerecord.attributes.credit_card.number'), :class => 'help-inline required_asterick' %>
+              <%= f.label :phone_number, t('activerecord.attributes.member.phone_number'), :class => 'help-inline required_asterick' %>
             </th>
             <td> 
-              <%= credit_card.text_field :number, :class => 'text_field input-medium', 
-                                      :name => "member[credit_card][number]"%>
+              <%= f.text_field :phone_country_code, :class => 'text_field input-mini', :placeholder => t('activerecord.attributes.member.phone_country_code') %> 
+              <%= f.text_field :phone_area_code, :class => 'text_field input-mini', :placeholder => t('activerecord.attributes.member.phone_area_code') %> 
+              <%= f.text_field :phone_local_number, :class => 'text_field input-mini', :placeholder => t('activerecord.attributes.member.phone_local_number') %> 
+              <% if !@member.new_record? && !@member.wrong_phone_number.nil? %>
+              <br><%= t('activerecord.attributes.member.unset_wrong_phone_number') %>
+                  <%= check_box :setter, :wrong_phone_number %>
+              <% end %>
             </td>  
+          </tr>
+          <tr class = "control-group">
             <th>
-              <%= credit_card.label :expire_month, t('activerecord.attributes.credit_card.expire_month'), :class => 'help-inline required_asterick' %> 
+              <%= f.label :type_of_phone_number, t('activerecord.attributes.member.type_of_phone_number'), :class => 'help-inline' %>
             </th>
             <td> 
-              <%= credit_card.select :expire_month, @months, :class => 'text_field input-small', :name => "member[credit_card][expire_month]", :include_blank => true  %>
+              <%= f.select :type_of_phone_number, [['Mobile', 'mobile'],['Home', 'home'],['Other','other']], :class => 'select_field', :include_blank => true %>
             </td>  
+          </tr>
+          <tr class = "control-group">
+            <% if @member.new_record? %>
+              <th>
+                <%= f.label :terms_of_membership_id, t('activerecord.attributes.member.terms_of_membership_id'), :class => 'help-inline required_asterick' %>
+              </th>
+              <th> 
+                <%= select_tag('member[terms_of_membership_id]', options_from_collection_for_select(@terms_of_memberships, "id", "name")) %>
+              </th>  
+            <% elsif can? :manual_billing, Member and not @member.manual_payment %>
+              <th>
+              <%= f.label :manual_payment, t('activerecord.attributes.member.manual_payment'), :class => 'help-inline' %>
+              </th>
+              <th> 
+                <%= check_box :member, :manual_payment %>              
+                <%= render :partial => "shared/help", :locals => { :title => t('activerecord.attributes.member.manual_payment'), :content => t('activerecord.attributes.member.manual_payment_help')} %>
+              </th>
+            <% end %>
+          </tr>
+        </table>
+      </td>
+      <td style="width: 50%;">
+        <table class="hidden_table_border">
+          <tr class = "control-group">
             <th>
-              <%= credit_card.label :expire_year, t('activerecord.attributes.credit_card.expire_year'), :class => 'help-inline required_asterick' %>
+              <%= f.label :email, t('activerecord.attributes.member.email'), :class => 'help-inline required_asterick' %>
             </th>
             <td> 
-              <%= credit_card.select :expire_year, @years, :class => 'text_field input-small', :name => "member[credit_card][expire_year]", :include_blank => true  %>
+              <%= f.text_field :email, :class => 'text_field'%>
             </td>  
           </tr>
         </table>
       </td>
     </tr>
-  <% end %>
   </tbody>
 </table>
+
+<% if @member.new_record? %>
+  <table id="table_credit_card" class="table table-bordered table-condensed table-nohover">
+    <thead>
+      <tr class="box_title">
+        <th>
+          <h4>Credit Card
+          <%= f.label :allow_cc_blank,t('Allow blank credit card?'), :class => 'help-inline' %>
+          <%= check_box :setter, :cc_blank %>
+          </h4>
+        </th>
+      </tr>
+    </thead>
+    <tbody>
+      <%= f.fields_for :credit_card do |credit_card| %>
+        <tr>
+          <td>
+            <table class="hidden_table_border">
+              <tr class = "control-group">
+                <th>
+                  <%= credit_card.label :number, t('activerecord.attributes.credit_card.number'), :class => 'help-inline required_asterick' %>
+                </th>
+                <td> 
+                  <%= credit_card.text_field :number, :class => 'text_field input-medium', 
+                                          :name => "member[credit_card][number]"%>
+                </td>  
+                <th>
+                  <%= credit_card.label :expire_month, t('activerecord.attributes.credit_card.expire_month'), :class => 'help-inline required_asterick' %> 
+                </th>
+                <td> 
+                  <%= credit_card.select :expire_month, @months, :class => 'text_field input-small', :name => "member[credit_card][expire_month]", :include_blank => true  %>
+                </td>  
+                <th>
+                  <%= credit_card.label :expire_year, t('activerecord.attributes.credit_card.expire_year'), :class => 'help-inline required_asterick' %>
+                </th>
+                <td> 
+                  <%= credit_card.select :expire_year, @years, :class => 'text_field input-small', :name => "member[credit_card][expire_year]", :include_blank => true  %>
+                </td>  
+              </tr>
+            </table>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+
+  <table id="table_fulfillments" class="table table-bordered table-condensed table-nohover">
+    <thead>
+      <tr class="box_title">
+        <th>
+          <h4>Fulfillment</h4>
+        </th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>
+          <table class="hidden_table_border">
+            <tr class = "control-group">
+              <th>
+                <%= f.label :kit_card_product_sku, t('activerecord.attributes.enrollment_info.kit_card_product_sku') %>
+              </th>
+              <td> 
+                <%= check_box_tag :kit_card_product_sku %>
+              </td>  
+              <th>
+                <%= f.label :product_sku, t('activerecord.attributes.enrollment_info.product_sku') %>
+              </th>
+              <td> 
+                <%= select_tag :product_sku, options_from_collection_for_select(@current_club.products.with_stock.not_kit_card, "id", "sku"),  :include_blank => true %>
+              </td>  
+            </tr>
+          </table>
+        </td>
+      </tr>
+    </tbody>
+  </table>
 <% end %>
 Please, have in mind that fields with ' * ' are required. 
 <br>
@@ -265,7 +297,7 @@ Please, have in mind that fields with ' * ' are required.
 
 <% if @member.new_record? %>
   <%= f.hidden_field :enrollment_amount, :value => 0.0 %>
-  <%= f.hidden_field :product_sku, :value => Club::DEFAULT_PRODUCT.join(',') %>
+  <%= f.hidden_field :product_sku, :value => '' %>
   <%= f.hidden_field :mega_channel, :value => EnrollmentInfo::CS_MEGA_CHANNEL %>
   <%= f.hidden_field :campaign_medium, :value => EnrollmentInfo::CS_CAMPAIGN_MEDIUM %>
   <%= f.hidden_field :landing_url, :value => request.env['HTTP_HOST'] %>
