--- a/app/views/terms_of_memberships/_form.html.erb
+++ b/app/views/terms_of_memberships/_form.html.erb
@@ -141,7 +141,7 @@
       <br /><br />
  -->      <%= radio_button_tag 'if_cannot_bill_member', 'downgrade_to', @tom.if_cannot_bill == 'downgrade_tom' %>&nbsp;
       <%= t('activerecord.attributes.terms_of_membership.wizard.downgrade_to') %>
-      <%= select_for_toms('downgrade_to_tom', @tom.downgrade_tom_id) %>
+      <%= select_for_toms('downgrade_to_tom', @tom.downgrade_tom_id, @tom) %>
       <%= render :partial => "shared/help", :locals => { 
         :title => t('activerecord.attributes.terms_of_membership.wizard.if_cannot_bill_member_then'), 
         :content => t('lorem') } %> 
@@ -150,7 +150,7 @@
 <!--   <div class="control-group">
     <%= label_tag 'upgrade_to_tom', t('activerecord.attributes.terms_of_membership.wizard.upgrade_to'), :class => 'control-label' %>
     <div class="controls">
-      <%= select_for_toms('upgrade_to_tom', @tom.upgrade_tom_id) %>&nbsp;
+      <%= select_for_toms('upgrade_to_tom', @tom.upgrade_tom_id, @tom) %>&nbsp;
       <%= t('activerecord.attributes.terms_of_membership.wizard.after') %>      
       <%= text_field_tag 'upgrade_to_tom_days', @tom.upgrade_tom_period, :class => 'text_field input-small', :placeholder => '0', :type => 'number' %>
       <%= select_for_date_span("upgrade_to_tom_days_time_span") %>
