[#58455730] removed subscription limits from tom's show page.

--- a/app/views/terms_of_memberships/show.html.erb
+++ b/app/views/terms_of_memberships/show.html.erb
@@ -31,10 +31,10 @@
       <b> <%= t('activerecord.attributes.terms_of_membership.installment_period') %>: </b> 
       <%= @tom.installment_period.nil? ? 0 : @tom.installment_period  %>  <%= t('days') %>
     </div>
-    <div class="span2"> 
+<!--     <div class="span2"> 
       <b> <%= t('activerecord.attributes.terms_of_membership.subscription_limits') %>: </b> 
       <%= @tom.subscription_limits %>
-    </div>
+    </div> -->
     <div class="span2"> 
       <b> <%= t('activerecord.attributes.terms_of_membership.external_code') %>: </b> 
       <%= @tom.api_role %> 
