[#58454958] removed initial_fee from tom's show page.

--- a/app/views/terms_of_memberships/show.html.erb
+++ b/app/views/terms_of_memberships/show.html.erb
@@ -19,10 +19,10 @@
       <b> <%= t('activerecord.attributes.terms_of_membership.provisional_days') %>: </b> 
       <%= @tom.provisional_days %> 
     </div>
-    <div class="span2"> 
+<!--     <div class="span2"> 
       <b> <%= t('activerecord.attributes.terms_of_membership.initial_fee') %>: </b> 
       <%= number_to_currency(@tom.initial_fee) %>
-    </div>
+    </div> -->
     <div class="span2"> 
       <b> <%= t('activerecord.attributes.terms_of_membership.payment_is_expected') %>: </b> 
       <%= @tom.is_payment_expected ? 'Yes' : 'No' %>
