[#55133112] moved tests and added fields related to upgrade within tom manager.

--- a/app/views/terms_of_memberships/_form.html.erb
+++ b/app/views/terms_of_memberships/_form.html.erb
@@ -147,7 +147,7 @@
         :content => t('lorem') } %> 
     </div>
   </div>
-<!--   <div class="control-group">
+  <div class="control-group">
     <%= label_tag 'upgrade_to_tom', t('activerecord.attributes.terms_of_membership.wizard.upgrade_to'), :class => 'control-label' %>
     <div class="controls">
       <%= select_for_toms('upgrade_to_tom', @tom.upgrade_tom_id, @tom) %>&nbsp;
@@ -158,7 +158,7 @@
         :title => t('activerecord.attributes.terms_of_membership.wizard.upgrade_to'), 
         :content => t('lorem') } %> 
     </div>
-  </div> -->
+  </div> 
 </div>
 
 <div id="" class="form-actions">
