[#57392664] added tests and feature to handle when payment is not expected.

--- a/app/views/terms_of_memberships/_form.html.erb
+++ b/app/views/terms_of_memberships/_form.html.erb
@@ -69,17 +69,17 @@
   <div class="control-group">
     <%= label_tag 'is_payment_expected', t('activerecord.attributes.terms_of_membership.wizard.at_the_end_of_trial'), :class => 'control-label' %>
     <div class="controls">
-      <%= radio_button_tag 'is_payment_expected', 'yes', ((@tom.is_payment_expected == 1 unless !@tom.is_payment_expected) or true), :class => 'required' %>
+      <%= radio_button_tag 'is_payment_expected', 'yes', ((@tom.is_payment_expected == true unless !@tom.is_payment_expected) or true), :class => 'required' %>
       <%= t('activerecord.attributes.terms_of_membership.wizard.payment_is_expected') %>&nbsp;
-<!--       <%= radio_button_tag 'is_payment_expected', 'no', @tom.is_payment_expected == 0 %>
+       <%= radio_button_tag 'is_payment_expected', 'no', @tom.is_payment_expected == false %>
       <%= t('activerecord.attributes.terms_of_membership.wizard.no_pay_is_expected') %>&nbsp;
       <%= render :partial => "shared/help", :locals => { 
         :title => t('activerecord.attributes.terms_of_membership.wizard.at_the_end_of_trial'), 
-        :content => t('lorem') } %>  -->
+        :content => t('lorem') } %>
     </div>
   </div>
 
-  <div class="control-group" style="<%= @tom.is_payment_expected == 0 ? 'display:none' : ''%>" id="recurring_amount_group">
+  <div class="control-group" style="<%= @tom.is_payment_expected == false ? 'display:none' : ''%>" id="recurring_amount_group">
     <%= label_tag 'recurring_amount', t('activerecord.attributes.terms_of_membership.wizard.recurring_amount'), :class => 'control-label' %>
     <div class="controls">
       $&nbsp;<%= text_field_tag 'installment_amount', @tom.installment_amount, :class => 'text_field input-small required', :placeholder => '0', :type => 'number' %>
