--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -271,19 +271,19 @@
             <th><%= t('activerecord.attributes.member.join_date') %>:</th>
             <td id="td_mi_join_date"><%= I18n.l @current_membership.join_date, :format => :only_date %></td>
           </tr>
-          
-          <tr class="ligthgrey">
-            <th><%= t('activerecord.attributes.member.next_retry_bill_date') %>:</th>
-            <td id="td_mi_next_retry_bill_date">
-              <%= I18n.l(@current_member.next_retry_bill_date, :format => :only_date) unless @current_member.next_retry_bill_date.nil? %>&nbsp;&nbsp;&nbsp;
-              <% if @current_member.can_change_next_bill_date? %>
-                <%= link_to(member_change_next_bill_date_path, :class => "btn btn-mini btn-info", :id => "link_member_change_next_bill_date", :disabled => (cannot? :change_next_bill_date, Member)) do %> 
-                  <i class="icon-pencil"></i> Change
+          <% if @current_member.is_billing_expected? %>
+            <tr class="ligthgrey">
+              <th><%= t('activerecord.attributes.member.next_retry_bill_date') %>:</th>
+              <td id="td_mi_next_retry_bill_date">
+                <%= I18n.l(@current_member.next_retry_bill_date, :format => :only_date) unless @current_member.next_retry_bill_date.nil? %>&nbsp;&nbsp;&nbsp;
+                <% if @current_member.can_change_next_bill_date? %>
+                  <%= link_to(member_change_next_bill_date_path, :class => "btn btn-mini btn-info", :id => "link_member_change_next_bill_date", :disabled => (cannot? :change_next_bill_date, Member)) do %> 
+                    <i class="icon-pencil"></i> Change
+                  <% end %>
                 <% end %>
-              <% end %>
-            </td>
-          </tr>
-
+              </td>
+            </tr>
+          <% end %>
           <tr>
             <th><%= t('activerecord.attributes.member.cancel_date') %>:</th>
             <td id="td_mi_cancel_date"><%= I18n.l(@current_membership.cancel_date, :format => :only_date) unless @current_membership.cancel_date.nil? %></td>  
